--- a/costurando.html
+++ b/costurando.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Corte e Costura Personalizada</title>
+    <title>Cortes e Costura Personalizada</title>
     <style>
         body {
             font-family: 'Arial', sans-serif;
