--- a/zs.html
+++ b/zs.html
@@ -201,7 +201,7 @@
             <div class="dot"></div>
         </div>
         <h1 style="font-size: 1.3rem;">Checking your browser before accessing...</h1><br>
-        <p>This process is automatic. Waiting Your browser to your requested content shortly.</p>
+        <p>This process is automatic. Wait your requested content shortly.</p>
         <p>Please allow up to 5 seconds...</p>
         <p><a href="#" class="link">DDoS protection by Cloudflare</a></p>
         <div class="ray-id">Ray ID: <span>6f23c4a2b8cd9d3a</span></div>
