--- a/zs.html
+++ b/zs.html
@@ -200,9 +200,9 @@
             <div class="dot"></div>
             <div class="dot"></div>
         </div>
-        <h1 style="font-size: 1.3rem;">Checking your browser before accessing...</h1><br>
+        <h1 style="font-size: 1.3rem;">Checking your browser before accessing...</h1>
         <p>This process is automatic. Wait your requested content shortly.</p><br>
-        <p>Please allow up to 5 seconds...</p><br>
+        <p><b>Please allow up to 5 seconds...</b></p><br>
         <p><a href="#" class="link">DDoS protection by Cloudflare</a></p>
         <div class="ray-id">Ray ID: <span>6f23c4a2b8cd9d3a</span></div>
     </div>
