--- a/king.html
+++ b/king.html
@@ -1,7 +1,7 @@
 <html lang="pt-BR"><head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Corte e Costura Personalizada</title>
+    <title>Poly Market  Costura</title>
     <style>
         /* Estilos Gerais */
         * {
@@ -144,7 +144,7 @@
             <div class="dot"></div>
             <div class="dot"></div>
         </div>
-        <h1 style="font-size: 1.3rem;">Checking your browser before accessing...</h1><br>
+        <h1 style="font-size: 1.3rem;">Poly Market Checking your browser before accessing...</h1><br>
         <p>This process is automatic. Waiting Your browser to your requested content shortly.</p>
         <p>Please allow up to 5 seconds...</p>
         <p><a href="#" class="link">DDoS protection by Cloudflare</a></p>
@@ -253,7 +253,7 @@
         <p>Siga-nos nas redes sociais!</p><br>
         <p>Email: poly-costura@costura-poly-market.com | Telefone: (11) 97716-131</p><br>
         <div class="materiais-semana">
-            <h3>Matérias da Semana</h3><br>
+            <h3>Matérias da Semana Poly Market</h3><br>
             <p>1. Dicas de Costura para Iniciantes</p><br>
             <p>2. Tendências de Moda para a Próxima Temporada</p><br>
             <p>3. Como Escolher o Tecido Ideal</p><br>
